namespaces/live.cloud-platform.service.justice.gov.uk/connecting-services-dev/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: connecting-services-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: connecting-services-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              component: ingress-controllers
              component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-pfl-analytics
  namespace: connecting-services-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pfl-analytics-dev
